--- a/app/views/admin/file/imagelist.scala.html
+++ b/app/views/admin/file/imagelist.scala.html
@@ -1,6 +1,6 @@
 @(images: List[models.files.ContentFile] = Nil)
 
-@if(!images.isEmpty){
+@if(images.nonEmpty){
     <table class="table table-striped table-hover table-bordered">
         <thead>
         <tr>
@@ -24,7 +24,12 @@
                 }
                 </td>
                 <td>@image.name</td>
-                <td>@image.owner.fullName<br>@image.owner.emailAddress</td>
+                <td>
+                @if(image.isAdminFile.asInstanceOf[Boolean]) {
+                    @Messages("admin.file.list.isAdminFile")<br>
+                }
+                 @image.owner.fullName<br>@image.owner.emailAddress
+                </td>
                 <td><a href="@image.getUrl" target="_blank">Open original</a></td>
                 <td>
                 @if(!image.fileTransformations.isEmpty) {
