--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -841,6 +841,7 @@ input[type="reset"]:hover
   background-size: 100%;
   padding: 160px 0px 0px 0px;
   width:100%;
+  background-image: url("/assets/images/startpage/startpage-box-default-bw.png");
 }
 .panel-startpage:nth-child(4n)
 {
@@ -1073,8 +1074,7 @@ input[type="reset"]:hover
 }
 .host-image-gallery .selected img
 {
-  opacity:0.5;
-  background-color:@hdc-green;
+  border:1px solid #999;
 }
 .host-main-carousel-thumbs.list-inline
 {
@@ -1157,7 +1157,40 @@ input[type="reset"]:hover
   clear:both;
 }
 
-
+// Recipe carousel
+#recipe-carousel
+{
+  border-bottom:1px solid white;
+}
+.polaroid {
+  padding: 5px 5px 20px 5px;
+  border: 1px solid #bfbfbf;
+  background-color: white;
+  box-shadow: 2px 2px 3px #aaaaaa;
+}
+#recipe-carousel .carousel-control span
+{
+  font-size:2em;
+}
+.recipe-gallery img,
+.recipe-carousel-thumbs img
+{
+  border-right:1px solid white;
+  width:100%;
+}
+.recipe-carousel-thumbs.list-inline
+{
+  margin:0px;
+}
+.recipe-carousel-thumbs.list-inline>li
+{
+  padding:0px;
+}
+.recipe-carousel-thumbs .selected img
+{
+  background-color: #fff8b7;
+  z-index:100;
+}
 
 // Login
 .login-form
