--- a/app/views/shared/img.scala.html
+++ b/app/views/shared/img.scala.html
@@ -1,9 +1,9 @@
-@(path: String, width: Option[Int] = None, height: Option[Int] = None, alt: String = "", title: String = "", cssClass: String = "")
+@(path: String, width: Option[Int] = None, height: Option[Int] = None, alt: String = "", title: String = "", cssClass: String = "", cssStyle: String = "")
 @import play.api.Play.resource
 @import play.api.Play.current
 
 @if(resource("public/" + path.stripPrefix("/")).isDefined || path.toLowerCase.startsWith("http")) {
     @defining(if(path.toLowerCase.startsWith("http")){ path }else{ routes.Assets.at(path.stripPrefix("/")) }){ parsedPath =>
-        <img src="@parsedPath" @if(!cssClass.isEmpty){ class="@cssClass" } border="0" @if(!title.isEmpty){ title="@title" } @if(!alt.isEmpty){ alt="@alt" }>
+        <img src="@parsedPath" @if(cssClass.nonEmpty){ class="@cssClass" } @if(cssStyle.nonEmpty){ style="@cssStyle" } border="0" @if(title.nonEmpty){ title="@title" } @if(alt.nonEmpty){ alt="@alt" }>
     }
 }
