--- a/app/views/startpage/startpageBox.scala.html
+++ b/app/views/startpage/startpageBox.scala.html
@@ -5,9 +5,14 @@
 
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4 col-md-offset-0">
             <a href="@box.linkToProfile">
-                <div class="thumbnail panel-startpage" style="background-image: url('@box.mainImage')">
+                @defining( if(box.mainImage.isDefined){ "style=\"background-image: url('" + box.mainImage.get + "')\"" } else { "" } ) { mainImage =>
+                <div class="thumbnail panel-startpage" @Html(mainImage)>
                     <div class="body">
-                        @shared.hostImageCircle(box.userImage)
+                        @if(box.userImage.isDefined){
+                            @shared.hostImageCircle(box.userImage.get)
+                        }else{
+                            @shared.hostImageCircle()
+                        }
                         <h2>@box.fullName</h2>
                         <hr>
                         <p class="location">@box.location<br></p>
@@ -15,6 +20,7 @@
                         <div class="host-level-icon level-guest01" data-toggle="tooltip" data-placement="right" title="@Messages("level.guest.description")"><span>@Messages("level.guest.header")</span></div>
                     </div>
                 </div>
+                }
             </a>
         </div>
     }
