--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1160,11 +1160,13 @@ input[type="reset"]:hover
 // Recipe carousel
 #recipe-carousel
 {
-  border-bottom:1px solid white;
+  margin-bottom:-5px;
+  margin-bottom:-5px;
+  border-bottom:0px solid white;
 }
 .polaroid {
-  padding: 5px 5px 20px 5px;
-  border: 1px solid #bfbfbf;
+  padding: 3px 3px 25px 3px;
+  border: 1px solid #efefef;
   background-color: white;
   box-shadow: 2px 2px 3px #aaaaaa;
 }
@@ -1175,7 +1177,6 @@ input[type="reset"]:hover
 .recipe-gallery img,
 .recipe-carousel-thumbs img
 {
-  border-right:1px solid white;
   width:100%;
 }
 .recipe-carousel-thumbs.list-inline
