--- a/app/views/custom/Registration/startSignUp.scala.html
+++ b/app/views/custom/Registration/startSignUp.scala.html
@@ -29,7 +29,8 @@
                             startForm("email"),
                             '_label -> Messages("securesocial.signup.email1"),
                             'class -> "input-xlarge",
-                            'autofocus -> "autofocus"
+                            'autofocus -> "autofocus",
+                            '_help -> Messages("securesocial.signup.email-required")
                             )
 
                             <div class="form-actions">
