--- a/app/views/admin/release/index.scala.html
+++ b/app/views/admin/release/index.scala.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("admin.release.index.header")</h1>
             <div class="btn-group">
-                <a href="@controllers.admin.routes.AdminReleaseController.releaseRun()" class="btn btn-primary">@Messages("admin.release.actions.releaserun")</a>
+                <a href="@controllers.admin.routes.AdminReleaseController.createDefaultData()" class="btn btn-primary">@Messages("admin.release.actions.releaserun")</a>
                 <a href="@controllers.admin.routes.AdminReleaseController.deleteAllFromDB()" class="btn btn-primary btn-danger">@Messages("admin.release.actions.deleteall")</a>
             </div>
         </div>
