--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -36,26 +36,21 @@
                 @defining( Registry.providers.all.values.filter( _.id != UsernamePassword) ) { externalProviders =>
 
                         @Registry.providers.get(UsernamePassword).map { up =>
-                            <div class="col-xs-12 col-md-10 col-md-offset-1 login-form">
-                                @if( externalProviders.size > 0 ) {
-                                    <h3>@Messages("securesocial.login.useEmailAndPassword")</h3>
-                                } else {
-                                    <h3>@Messages("securesocial.login.useEmailAndPasswordOnly")</h3>
-                                }
 
-                               @custom.provider("userpass", Some(loginForm))(request)
-                            </div>
+                            @defining(if( externalProviders.size > 0 ) { Messages("securesocial.login.useEmailAndPassword") }else{ Messages("securesocial.login.useEmailAndPasswordOnly") }) { providerHeader =>
+                               @custom.provider("userpass", Some(loginForm), Some(providerHeader))(request)
+                            }
                         }
 
                         @if( externalProviders.size > 0 ) {
-                            <div class="col-xs-12 col-md-4 col-md-offset-1 login-form">
+
                                 <h3>@Messages("securesocial.login.instructions")</h3>
                                 <p class="provider-icons margin-top">
                                 @for(p <- externalProviders) {
                                     @custom.provider(p.id)(request)
                                 }
                                 </p>
-                            </div>
+
                         }
                     }
 
