--- a/app/views/custom/provider.scala.html
+++ b/app/views/custom/provider.scala.html
@@ -1,4 +1,4 @@
-@(providerId: String, loginForm: Option[play.api.data.Form[(String, String)]] = None)(implicit request: play.api.mvc.RequestHeader)
+@(providerId: String, loginForm: Option[play.api.data.Form[(String, String)]] = None, providerHeader: Option[String] = None)(implicit request: play.api.mvc.RequestHeader)
 
 @import securesocial.core.Registry
 @import securesocial.core.IdentityProvider
@@ -11,12 +11,16 @@
 
 @Registry.providers.get(providerId).map { provider =>
             @if( provider.authMethod == OAuth1 || provider.authMethod == OAuth2 ) {
+                <div class="col-xs-12 col-md-10 col-md-offset-1 login-form">
                 @defining( "securesocial/images/providers/%s.png".format(provider.id) ) { imageUrl =>
                     <a href="@provider.authenticationUrl"> <img src="@RoutesHelper.at(imageUrl)"/></a>
                 }
+                </div>
             }
 
             @if( provider.authMethod == UserPassword ) {
+                <div class="col-xs-6 col-md-4 col-md-offset-1 login-form">
+                @if(providerHeader.nonEmpty){ <h3>@providerHeader</h3> }
                 <form action = "@securesocial.core.providers.utils.RoutesHelper.authenticateByPost("userpass").absoluteURL(IdentityProvider.sslEnabled)(request)"
                       class="form-horizontal" autocomplete="off" method="POST">
                     <fieldset>
@@ -50,13 +54,14 @@
                             <button type="submit" class="btn btn-primary pull-left">@Messages("securesocial.login.title")</button>
                             <a class="btn pull-left" href="@securesocial.core.providers.utils.RoutesHelper.startResetPassword()">@Messages("securesocial.login.forgotPassword")</a>
                         </div>
-                        <hr>
-                        <div class="clearfix margin-top">
-                            <p>@Messages("securesocial.login.signUp")<br>
-                            <p><a class="btn btn-primary" href="@securesocial.core.providers.utils.RoutesHelper.startSignUp()">@Messages("securesocial.login.here")</a></p>
-                        </div>
                     </fieldset>
                 </form>
+                </div>
+
+                <div class="col-xs-6 col-md-4 col-md-offset-1 login-form">
+                    <h3>@Messages("securesocial.login.signUp")</h3><br>
+                    <p><a class="btn btn-primary" href="@securesocial.core.providers.utils.RoutesHelper.startSignUp()">@Messages("securesocial.login.here")</a></p>
+                </div>
             }
 }.getOrElse {
     @*****************************************
